--- a/index.html
+++ b/index.html
@@ -321,31 +321,27 @@
                     {/* Menu Section */}
                     <section id="menu" className="py-24 px-4 bg-[#0A0A0A] relative scroll-mt-24">
                         <div className="container mx-auto max-w-6xl relative z-10">
-                            <div className="flex flex-col md:flex-row justify-between items-end mb-12 gap-6">
-                                <div>
-                                    <h2 className="font-oswald text-5xl md:text-6xl text-white uppercase mb-2">Меню</h2>
-                                    <p className="text-gray-500">Лучшее, что мы умеем готовить</p>
-                                </div>
-                                
-                                {/* Scrollable Tabs */}
-                                <div className="w-full md:w-auto overflow-x-auto no-scrollbar pb-2">
-                                    <div className="flex gap-2">
-                                        {Object.entries(menuData).map(([key, section]) => (
-                                            <button
-                                                key={key}
-                                                onClick={() => setActiveCategory(key)}
-                                                className={`flex items-center gap-2 px-6 py-3 rounded-xl text-sm font-bold uppercase tracking-wider transition-all duration-300 whitespace-nowrap border-2 flex-shrink-0 ${
-                                                    activeCategory === key
-                                                        ? 'bg-white text-black border-white'
-                                                        : 'bg-transparent text-gray-400 border-transparent hover:border-white/20 hover:text-white'
-                                                }`}
-                                            >
-                                                {section.icon}
-                                                {section.title}
-                                            </button>
-                                        ))}
-                                    </div>
-                                </div>
+                            <div className="text-center mb-12">
+                                <h2 className="font-oswald text-5xl md:text-6xl text-white uppercase mb-2">Меню</h2>
+                                <p className="text-gray-500">Лучшее, что мы умеем готовить</p>
+                            </div>
+                            
+                            {/* Wrapping Tabs */}
+                            <div className="flex flex-wrap justify-center gap-3 mb-12">
+                                {Object.entries(menuData).map(([key, section]) => (
+                                    <button
+                                        key={key}
+                                        onClick={() => setActiveCategory(key)}
+                                        className={`flex items-center gap-2 px-6 py-3 rounded-xl text-sm font-bold uppercase tracking-wider transition-all duration-300 whitespace-nowrap border-2 flex-shrink-0 ${
+                                            activeCategory === key
+                                                ? 'bg-white text-black border-white'
+                                                : 'bg-transparent text-gray-400 border-transparent hover:border-white/20 hover:text-white'
+                                        }`}
+                                    >
+                                        {section.icon}
+                                        {section.title}
+                                    </button>
+                                ))}
                             </div>
 
                             {/* Items Grid - Masonry style feel */}
